# eosio-coinbase-price-feed

./: .gitignore  README.md  package-lock.json  package.json  zeus-box.json
api/: decode.js  decodeParameters.js  index.js  keccak.js  recover.js
contracts/eos/: CMakeLists.txt
contracts/eos/oracle/: CMakeLists.txt  oracle.cpp
sample/: .sample.env  okcoin_output.json  sample_output.json
test/: oracle.spec.js
